fix(stylings): small alignment issue with the slider value elm height

--- a/packages/common/src/styles/_variables-theme-salesforce.scss
+++ b/packages/common/src/styles/_variables-theme-salesforce.scss
@@ -158,7 +158,6 @@ $date-editor-clear-button-icon-vertical-align:  initial !default;
 $date-editor-clear-button-icon-height:          14px !default;
 $date-editor-clear-button-icon-width:           14px !default;
 $editor-focus-box-shadow:                       0 0 3px $primary-color !default;
-$editor-modal-input-editor-height:              28px !default;
 $editor-modal-container-radius:                 var(--lwc-borderRadiusMedium, 0.25rem) !default;
 $editor-modal-close-btn-outside-color:          #ffffff !default;
 $editor-modal-close-btn-outside-font-size:      36px !default;
@@ -166,7 +165,6 @@ $editor-modal-close-btn-outside-right:          -7px !default;
 $editor-modal-close-btn-outside-top:            -32px !default;
 $editor-modal-footer-btn-height:                28px;
 $editor-modal-header-border-bottom:             var(--lwc-borderWidthThick, 2px) solid var(--lwc-colorBorder, rgb(221, 219, 218)) !default;
-$editor-modal-slider-editor-value-min-height:   calc(#{$editor-modal-input-editor-height - 2px}) !default;
 $editor-modal-title-font-size:                  var(--lwc-fontSize7, 1.25rem) !default;
 $editor-modal-title-font-weight:                var(--lwc-fontWeightLight, 300) !default;
 $editor-modal-title-line-height:                var(--lwc-lineHeightHeading, 1.25) !default;
